<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HEX</string>

    <string name="toast_msg_a_play_first">Blue plays first!</string>
    <string name="toast_msg_b_play_first">Red plays first!</string>

    <string name="game_result_dialog_title">Result</string>
    <string name="game_result_dialog_msg_human_win">Congratulations! You win!</string>
    <string name="game_result_dialog_msg_robot_win">Robot wins the game.</string>
    <string name="game_result_dialog_msg_a_win">Blue wins!</string>
    <string name="game_result_dialog_msg_b_win">Red wins!</string>
    <string name="game_result_dialog_button_share">Share</string>
    <string name="game_result_dialog_button_play_again">Play Again</string>

    <!-- Settings -->
    <string name="settings_screen_title">Settings</string>
    <string name="settings_key_board_size">settings_key_board_size</string>
    <string name="settings_title_board_size">Board Size</string>

    <string name="settings_key_game_mode">settings_key_game_mode</string>
    <string name="settings_title_game_mode">Game Mode</string>
    <string-array name="settings_game_mode">
        <item>Player VS Robot</item>
        <item>Player VS Player</item>
    </string-array>
    <string-array name="settings_game_mode_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="settings_key_first_player">settings_key_first_player</string>
    <string name="settings_title_first_player">First Player</string>
    <string-array name="settings_first_player">
        <item>Take Turns</item>
        <item>Random</item>
        <item>Player I</item>
        <item>Player II</item>
    </string-array>
    <string-array name="settings_first_player_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="settings_key_color">settings_key_color</string>
    <string name="settings_title_color">Color</string>

    <string name="settings_title_version">Version</string>
    <string name="settings_key_version">settings_key_version</string>
    <!-- Settings End-->

    <!-- Game Wizard Start -->
    <string name="game_wizard_1_title">Welcome</string>
    <string name="game_wizard_1_msg">Let\'s go to learn how to play it!</string>
    <string name="game_wizard_2_title">Blue Wins</string>
    <string name="game_wizard_2_msg">If the &lt;font color="#3f51b5"&gt;&lt;b&gt;BLUE&lt;/b&gt;&lt;/font&gt; pieces connect the &lt;font color="#3f51b5"&gt;&lt;b&gt;LEFT&lt;/b&gt;&lt;/font&gt; to &lt;font color="#3f51b5"&gt;&lt;b&gt;RIGHT&lt;/b&gt;&lt;/font&gt;, the &lt;font color="#3f51b5"&gt;&lt;b&gt;BLUE&lt;/b&gt;&lt;/font&gt; player wins.</string>
    <string name="game_wizard_3_title">Red Wins</string>
    <string name="game_wizard_3_msg">If the &lt;font color="#e91e63"&gt;&lt;b&gt;RED&lt;/b&gt;&lt;/font&gt; pieces connect the &lt;font color="#e91e63"&gt;&lt;b&gt;TOP&lt;/b&gt;&lt;/font&gt; to &lt;font color="#e91e63"&gt;&lt;b&gt;BOTTOM&lt;/b&gt;&lt;/font&gt;, the &lt;font color="#e91e63"&gt;&lt;b&gt;RED&lt;/b&gt;&lt;/font&gt; player wins. </string>
    <string name="game_wizard_4_title">Game Menu</string>
    <string name="game_wizard_4_msg">Click the avatar to show the menu.</string>
    <string name="game_wizard_5_title">Settings</string>
    <string name="game_wizard_5_msg">You can set the board size, the game mode, etc.</string>
    <string name="game_wizard_6_title">Share</string>
    <string name="game_wizard_6_msg">Share the awesome &lt;b&gt;HEX&lt;/b&gt; game to your friends!</string>
    <string name="game_wizard_7_title">Help</string>
    <string name="game_wizard_7_msg">Read the game wizard.</string>
    <string name="game_wizard_next">NEXT</string>
    <string name="game_wizard_previous">PREVIOUS</string>
    <string name="game_wizard_go">GO</string>
    <string name="game_wizard_start_to_play">PLAY</string>
    <!-- Game Wizard End -->

    <!-- Social Start -->
    <string name="social_share_to">Share to</string>
    <string name="social_wechat">WeChat</string>
    <string name="social_moments">Moments</string>
    <string name="social_wechat_description">Welcome to play HEX game!</string>
    <!-- Social End -->
</resources>
