<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:title="Board Size"
        android:dialogTitle="Board Size"
        android:key="@string/settings_key_board_size"
        android:entries="@array/settings_game_mode"
        android:entryValues="@array/settings_game_mode"
        android:defaultValue="Player VS Player" />
    <ListPreference
        android:title="@string/settings_title_game_mode"
        android:dialogTitle="@string/settings_title_game_mode"
        android:key="@string/settings_key_game_mode"
        android:entries="@array/settings_game_mode"
        android:entryValues="@array/settings_game_mode"
        android:defaultValue="Player VS Player" />
    <ListPreference
        android:title="@string/settings_title_first_player"
        android:dialogTitle="@string/settings_title_first_player"
        android:key="@string/settings_key_first_player"
        android:entries="@array/settings_first_player"
        android:entryValues="@array/settings_first_player"
        android:defaultValue="Player I" />
    <Preference
        android:title="@string/settings_title_version"
        android:key="@string/settings_key_version" />
</PreferenceScreen>